<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_register"
            android:icon="@mipmap/notes"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_login"
            android:icon="@mipmap/login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_addItem"
            android:icon="@mipmap/add"
            android:title="@string/addItem" />
    </group>
</menu>